New design, other changes: - Main screen now uses navigation list - All profile operations now done from main screen - Profile list now selection only (no editing/adding/deleting) - Fix some Lint warnings